force-app/main/default/objects/AHA_EasyMilestones_Exit_Field_Update__mdt/AHA_EasyMilestones_Exit_Field_Update__mdt.object-meta.xml
<CustomObject>
    <label>AHA Easy Milestones Exit Field Update</label>
    <pluralLabel>AHA Easy Milestones Exit Field Updates</pluralLabel>
</CustomObject>