force-app/main/default/objects/AHA_EasyMilestones_Exit_Field_Update__mdt/fields/Process_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Process_Milestone__c</fullName>
    <label>Process Milestone</label>
    <type>MetadataRelationship</type>
    <relationshipName>Exit_Field_Update_Process_Milestone</relationshipName>
    <referenceTo>AHA_EasyMilestones_Process_Milestone__mdt</referenceTo>
</CustomField>