force-app/main/default/objects/AHA_EasyMilestones_Exit_Field_Update__mdt/fields/Update_Context__c.field-meta.xml
<CustomField>
    <fullName>Update_Context__c</fullName>
    <label>Update Context</label>
    <type>Text</type>
    <length>50</length>
</CustomField>