force-app/main/default/objects/AHA_EasyMilestones_Exit_Field_Update__mdt/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <label>Update Type</label>
    <type>Text</type>
    <length>20</length>
</CustomField>