force-app/main/default/objects/AHA_EasyMilestones_Exit_Field_Update__mdt/fields/Update_Value__c.field-meta.xml
<CustomField>
    <fullName>Update_Value__c</fullName>
    <label>Update Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>